--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 - chmod 600 ~/.ssh/id_rsa
 - eval $(ssh-agent)
 - ssh-add ~/.ssh/id_rsa
-# - cp ssh_config ~/.ssh/config
+- cp ssh_config ~/.ssh/config
 - git config --global user.name "luck9star"
 - git config --global user.email hadyenvip@gmail.com
 
