--- a/_config.yml
+++ b/_config.yml
@@ -74,12 +74,17 @@ pagination_dir: page
 theme: yilia
 
 
+
 #sitemap
 sitemap:
 path: sitemap.xml
 baidusitemap:
 path: baidusitemap.xml
 
+archive_generator:
+  per_page: 20
+  yearly: true
+  monthly: true
 
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
