--- a/_config.yml
+++ b/_config.yml
@@ -81,6 +81,9 @@ path: sitemap.xml
 baidusitemap:
 path: baidusitemap.xml
 
+markdown:
+  render:
+    html: true
 
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
