markdown it full config

--- a/_config.yml
+++ b/_config.yml
@@ -81,9 +81,27 @@ path: sitemap.xml
 baidusitemap:
 path: baidusitemap.xml
 
+# Markdown-it config
+## Docs: https://github.com/celsomiranda/hexo-renderer-markdown-it/wiki
 markdown:
   render:
     html: true
+    xhtmlOut: false
+    breaks: true
+    linkify: true
+    typographer: true
+    quotes: '“”‘’'
+  plugins:
+    - markdown-it-footnote
+    - markdown-it-sup
+    - markdown-it-sub
+    - markdown-it-abbr
+  anchors:
+    level: 2
+    collisionSuffix: 'v'
+    permalink: true
+    permalinkClass: header-anchor
+    permalinkSymbol: ¶
 
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
