--- a/package.json
+++ b/package.json
@@ -3,28 +3,33 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.1.1"
+    "version": "3.8.0"
   },
   "dependencies": {
-    "hexo": "^3.1.0",
+    "hexo": "^3.8.0",
+    "hexo-abbrlink": "^2.0.5",
+    "hexo-all-minifier": "^0.5.2",
+    "hexo-autolinker": "^1.0.1",
     "hexo-deployer-ftp": "^0.1.0",
     "hexo-deployer-ftpsync": "^0.1.1",
-    "hexo-deployer-git": "0.0.4",
-    "hexo-deployer-heroku": "0.0.3",
-    "hexo-deployer-openshift": "0.0.1",
+    "hexo-deployer-git": "0.3.1",
+    "hexo-deployer-heroku": "0.1.2",
+    "hexo-deployer-openshift": "0.1.2",
     "hexo-deployer-rsync": "^0.1.1",
     "hexo-generator-archive": "^0.1.3",
-    "hexo-generator-baidu-sitemap": "^0.1.1",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.0.3",
-    "hexo-generator-index": "^0.1.3",
-    "hexo-generator-sitemap": "^1.0.1",
-    "hexo-generator-tag": "^0.1.2",
-    "hexo-migrator-ghost": "0.0.1",
-    "hexo-renderer-ejs": "^0.1.0",
+    "hexo-generator-index": "^0.2.1",
+    "hexo-generator-index-plus": "^1.0.0",
+    "hexo-generator-seo-friendly-sitemap": "0.0.22",
+    "hexo-generator-tag": "^0.2.0",
+    "hexo-lazyload": "^1.3.6",
+    "hexo-migrator-ghost": "0.1.0",
+    "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-markdown-it": "^3.4.0",
-    "hexo-renderer-stylus": "^0.2.3",
-    "hexo-server": "^0.1.2",
-    "hexo-tag-bootstrap": "0.0.8"
+    "hexo-renderer-stylus": "^0.3.3",
+    "hexo-server": "^0.3.3",
+    "hexo-symbols-count-time": "^0.4.4",
+    "hexo-tag-bootstrap": "0.1.2"
   }
 }
