--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,6 @@ node_js:
 - stable
 
 before_install:
-- openssl aes-256-cbc -K $encrypted_b69137d15df0_key -iv $encrypted_b69137d15df0_iv
-  -in id_rsa.enc -out ~/.ssh/id_rsa -d
-- chmod 600 ~/.ssh/id_rsa
-- eval $(ssh-agent)
-- ssh-add ~/.ssh/id_rsa
-- cp ssh_config ~/.ssh/config
 - git config --global user.name "luck9star"
 - git config --global user.email hadyenvip@gmail.com
 
@@ -28,4 +22,5 @@ script:
 # - hexo d
 after_script:
 - sed -i "s/github_token/${GITHUB_TOKEN}/g" ./_config.yml
+- sed -i "s/coding_token/${CODING_TOKEN}/g" ./_config.yml
 - hexo d
