--- a/_config.yml
+++ b/_config.yml
@@ -128,3 +128,6 @@ deploy:
 - type: git
   repo: https://github_token@github.com/Luck9Star/luck9star.github.io.git
   branch: master
+- type: git
+  repo: https://coding_token@git.dev.tencent.com/LuckyStar/luck9star.coding.me.git
+  branch: master
