--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ keywords: "iOS, Docker, Swift, 开发, 程序"
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://blog.1tian.me
+url: http://hexo.1tian.me
 root: /
 # permalink: :year/:month/:day/:title/
 # permalink_defaults:
