--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
 install:
 - npm install hexo-cli -g
 - npm install hexo --save
+- npm install hexo-deployer-git
 - npm install
 
 script:
