--- a/package.json
+++ b/package.json
@@ -9,24 +9,15 @@
     "hexo": "^3.8.0",
     "hexo-abbrlink": "^2.0.5",
     "hexo-all-minifier": "^0.5.2",
+    "hexo-asset-image": "^0.0.3",
     "hexo-autolinker": "^1.0.1",
-    "hexo-deployer-ftp": "^0.1.0",
-    "hexo-deployer-ftpsync": "^0.1.1",
-    "hexo-deployer-git": "0.3.1",
-    "hexo-deployer-heroku": "0.1.2",
-    "hexo-deployer-openshift": "0.1.2",
-    "hexo-deployer-rsync": "^0.1.1",
     "hexo-generator-archive": "^0.1.3",
     "hexo-generator-category": "^0.1.3",
-    "hexo-generator-feed": "^1.0.3",
-    "hexo-generator-index": "^0.2.1",
     "hexo-generator-index-plus": "^1.0.0",
     "hexo-generator-seo-friendly-sitemap": "0.0.22",
     "hexo-generator-tag": "^0.2.0",
-    "hexo-lazyload": "^1.3.6",
-    "hexo-migrator-ghost": "0.1.0",
     "hexo-renderer-ejs": "^0.3.1",
-    "hexo-renderer-markdown-it": "^3.4.0",
+    "hexo-renderer-markdown-it-plus": "^1.0.3",
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.3",
     "hexo-symbols-count-time": "^0.4.4",
