--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ node_js:
 before_install:
 - git config --global user.name "luck9star"
 - git config --global user.email hadyenvip@gmail.com
+- sudo apt-get update
+- sudo apt-get install -y nasm
 
 install:
 - npm install hexo-cli -g
