--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-os: osx
-
 branches:
   only:
   - blog
@@ -9,15 +7,23 @@ language: node_js
 node_js:
 - stable
 
+cache:
+  directories:
+    - node_modules
+
 before_install:
 - git config --global user.name "luck9star"
 - git config --global user.email hadyenvip@gmail.com
-- brew install nasm
-
-install:
+- sudo apt-get update
+- sudo apt-get install -y nasm
+- npm install -g gulp
 - npm install hexo-cli -g
 - npm install hexo --save
+
+install:
+- npm install
 - npm install hexo-deployer-git --save
+- cd themes/next
 - npm install
 
 script:
