--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ keywords: "iOS, Docker, Swift, 开发, 程序"
 url: https://hexo.1tian.me
 permalink: posts/:abbrlink/ 
 permalink_defaults:
-pretty_urls:
-  trailing_index: false # Set to false to remove trailing 'index.html' from permalinks
-  trailing_html: false # Set to false to remove trailing '.html' from permalinks
+# pretty_urls:
+#   trailing_index: false # Set to false to remove trailing 'index.html' from permalinks
+#   trailing_html: false # Set to false to remove trailing '.html' from permalinks
 
 # Directory
 source_dir: source
