--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ keywords: "iOS, Docker, Swift, 开发, 程序"
 url: https://hexo.1tian.me
 permalink: posts/:abbrlink/ 
 permalink_defaults:
-# pretty_urls:
-#   trailing_index: false # Set to false to remove trailing 'index.html' from permalinks
-#   trailing_html: false # Set to false to remove trailing '.html' from permalinks
+pretty_urls:
+  trailing_index: false # Set to false to remove trailing 'index.html' from permalinks
+  trailing_html: false # Set to false to remove trailing '.html' from permalinks
 
 # Directory
 source_dir: source
@@ -41,7 +41,7 @@ external_link:
 filename_case: 0
 render_drafts: false
 post_asset_folder: true
-relative_link: true
+relative_link: false
 future: true
 highlight:
   enable: true
@@ -51,7 +51,7 @@ highlight:
   wrap: true
   hljs: false
 prismjs:
-  enable: false
+  enable: true
   preprocess: true
   line_number: true
   tab_replace: ''
@@ -61,7 +61,7 @@ prismjs:
 # per_page: Posts displayed per page. (0 = disable pagination)
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
-  path: ''
+  # path: ''
   per_page: 10
   order_by: -date
 
